2010-01-07  Francois Felix Ingrand  <felix@ingrand.net>

	* mp-register.c (external_register_to_the_mp_host_prot):
	host_entry was reset by the start_mp_oprs, so I call it before
	each connect attempt (overkilling, but better safe than sorry).

	Now oprs-server (or any prs client) can properly start the
	message-passer and then successfully connect to it.

	* unification.c (matching_lenv_between_frames): Try to minimize
	void* and int mixup.

	* macro.h: bcopy and bzero should now take (void *).

2009-12-14  Francois Felix Ingrand  <felix@ingrand.net>


	* oprs-load.c (load_ptr): Now ptr can be 64 bits. Hence we dump
	and load unsgined long long (even on 32 bits machine to make the dump
	portable)... But we will get a warning upon reloading those 64
	bits address on a 32 bits machine.

2009-12-07  Francois Felix Ingrand  <felix@ingrand.net>

	* Various changes to make OpenPRS to compile on snow leopard which
	is now 64 bits by default. Hopefully, theses changes will not
	affect the 32 bits machines...

	* mp.c: time_t is a long.

2009-08-18  Felix Ingrand  <felix@laas.fr>

	* Fixed the long standing problem with lesstif enable to properly
	do an XmStringDrawImage. In fact, I did not fix lesstif (too
	complex) I used another way to do the visual trace. All this code
	should be moved to a newer graphic environment.

2009-05-09  Francois Felix Ingrand  <felix@ingrand.net>

	* oprs-type.c (debackslashify): Fixed a bug where I would report a
	"fake newline" in a string, which would greatly confuse the
	flex/bison parser about where errors are located.

2009-05-08  Francois Felix Ingrand  <felix@ingrand.net>

	* yacc-exp.y: Try to be more explicit about where we have a badly
	formed expression.


2009-03-30  Francois Felix Ingrand  <felix@ingrand.net>

	* ope-graphic.c (draw_node): Replaced XmStringDrawImage with
	XmStringDraw and it seems to work... this is rather puzzling... I
	will try to figure out why another time...
