@@ -3,7 +3,7 @@ static const char* const rcsid = "$Id$";
 /*                               -*- Mode: C -*-
  * ope-op-opf.c --
  *
- * Copyright (c) 1991-2003 Francois Felix Ingrand.
+ * Copyright (c) 1991-2010 Francois Felix Ingrand.
  * All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
@@ -38,6 +38,7 @@ static const char* const rcsid = "$Id$";
 
 #include <X11/Intrinsic.h>
 #include <Xm/Xm.h>
+#include <Xm/SelectioB.h>
 
 #include "macro.h"
 
@@ -427,7 +428,7 @@ void selectOpDialogManage(void)
      item = (XmStringTable)XtCalloc(sl_slist_length(current_opfile->list_op) + 1,sizeof(XmString));
 
      sl_loop_through_slist(current_opfile->list_op, op, Op_Structure *) {
-	  if (op->xms_name == NULL) op->xms_name = XmStringCreateLtoR(op->name, XmSTRING_DEFAULT_CHARSET);
+	  if (!op->xms_name) op->xms_name = XmStringCreateLtoR(op->name, XmSTRING_DEFAULT_CHARSET);
 	  item[i] = op->xms_name;
 	  i++;
      }
